Changes in Constant information

--- a/app/src/main/res/layout/activity_application_form.xml
+++ b/app/src/main/res/layout/activity_application_form.xml
@@ -79,18 +79,20 @@
                             android:id="@+id/lstEdadAdopcion"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+
+                            android:layout_marginStart="5dp"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="20dp"
+                            android:layout_toEndOf="@+id/imgListPerroAdopcion"
                             android:layout_toRightOf="@+id/imgListPerroAdopcion"
                             android:textSize="13sp"
-                            android:textStyle="bold"
-                            android:layout_marginStart="5dp"
-                            android:layout_toEndOf="@+id/imgListPerroAdopcion" />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/lstTamanoAdopcion"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+
                             android:layout_marginLeft="5dp"
                             android:layout_toRightOf="@+id/imgListPerroAdopcion"
                             android:textSize="13sp"
@@ -100,6 +102,7 @@
                             android:id="@+id/lstTipoAdopcion"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+
                             android:layout_marginLeft="5dp"
                             android:layout_toRightOf="@+id/imgListPerroAdopcion"
                             android:textSize="13sp"
@@ -109,6 +112,7 @@
                             android:id="@+id/lstSexoAdopcion"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+
                             android:layout_marginLeft="5dp"
                             android:layout_toRightOf="@+id/imgListPerroAdopcion"
                             android:textSize="13sp"
@@ -133,7 +137,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="vertical"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
@@ -320,9 +323,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="32dp"
             android:orientation="horizontal">
-
 
             <TextView
                 android:id="@+id/lblInstruccion"
@@ -338,57 +340,68 @@
             <EditText
                 android:id="@+id/txtInstruccion"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:visibility="invisible" />
 
 
         </LinearLayout>
 
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp">
+            android:layout_height="match_parent">
 
-            <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <RadioButton
-                    android:id="@+id/rbPrimaria"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/primaria"
-                    android:textSize="13sp" />
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/rbSecundaria"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/secundaria"
-                    android:textSize="13sp" />
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                <RadioButton
-                    android:id="@+id/rbGrado"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/grado"
-                    android:textSize="13sp" />
+                        <RadioButton
+                            android:id="@+id/rbPrimaria"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/primaria"
+                            android:textSize="13sp" />
 
-                <RadioButton
-                    android:id="@+id/rbPostgrado"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/postgrado"
-                    android:textSize="13sp" />
-            </RadioGroup>
+                        <RadioButton
+                            android:id="@+id/rbSecundaria"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/secundaria"
+                            android:textSize="13sp" />
+
+                        <RadioButton
+                            android:id="@+id/rbGrado"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/grado"
+                            android:textSize="13sp" />
+
+                        <RadioButton
+                            android:id="@+id/rbPostgrado"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/postgrado"
+                            android:textSize="13sp" />
+
+                    </TableRow>
 
 
-        </LinearLayout>
+                </RadioGroup>
+
+            </TableRow>
+
+
+        </TableLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -414,76 +427,116 @@
 
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="horizontal"
-            android:paddingTop="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp">
 
-            <RadioGroup
-                android:layout_width="136dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RadioButton
-                    android:id="@+id/rbCasa"
-                    android:layout_width="136dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/casa"
-                    android:textSize="13sp" />
-
-                <RadioButton
-                    android:id="@+id/rbDepartamento"
-                    android:layout_width="136dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/departamento"
-                    android:textSize="13sp" />
-
-                <RadioButton
-                    android:id="@+id/rbOtros"
-                    android:layout_width="136dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/otros"
-                    android:textSize="13sp" />
-            </RadioGroup>
-
-
-            <EditText
-                android:id="@+id/txtm2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:hint="m²"
-                android:textAlignment="center"
-                android:textSize="13sp">
-
-
-            </EditText>
-
-            <RadioGroup
+            <TableLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-                <RadioButton
-                    android:id="@+id/rbPropio"
-                    android:layout_width="118dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/propio"
-                    android:textSize="13sp" />
-
-                <RadioButton
-                    android:id="@+id/rbArrendado"
+                <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/arrendado"
-                    android:textSize="13sp" />
+                    android:layout_height="match_parent">
 
-            </RadioGroup>
+
+                    <RadioGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/rbCasa"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/casa"
+                            android:textSize="13sp" />
+
+                        <RadioButton
+                            android:id="@+id/rbDepartamento"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/departamento"
+                            android:textSize="13sp" />
+
+
+                        <RadioButton
+                            android:id="@+id/rbCampo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/campo"
+                            android:textSize="13sp" />
+
+                        <RadioButton
+                            android:id="@+id/rbOtros"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/otros"
+                            android:textSize="13sp" />
+
+                    </RadioGroup>
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RadioGroup
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/txtm2"
+                            android:layout_width="124dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal"
+                            android:hint="@string/cuadrados"
+                            android:textAlignment="center"
+                            android:textSize="13sp" />
+
+
+                        <RadioButton
+                            android:id="@+id/rbPropio"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/propio"
+                            android:textSize="13sp" />
+
+                        <RadioButton
+                            android:id="@+id/rbArrendado"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/arrendado"
+                            android:textSize="13sp" />
+
+                        <RadioButton
+                            android:id="@+id/rbServicio"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/servicio"
+                            android:textSize="13sp" />
+
+                    </RadioGroup>
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </TableLayout>
+
+
         </LinearLayout>
 
         <TextView
@@ -530,11 +583,11 @@
                 android:id="@+id/lblPregunta2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/pregunta2"
                 android:textSize="13sp"
-                android:textStyle="bold"
-                android:paddingStart="5dp" />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/txtPregunta2"
@@ -586,11 +639,11 @@
                 android:id="@+id/txtAGastar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/aGastar"
                 android:textSize="13sp"
-                android:textStyle="bold"
-                android:paddingStart="5dp" />
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -638,11 +691,11 @@
                 android:id="@+id/txtAVeterinario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/mascotaEnferma"
                 android:textSize="13sp"
-                android:textStyle="bold"
-                android:paddingStart="5dp" />
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -683,6 +736,7 @@
                 android:id="@+id/txtAcuerdo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/periodica"
                 android:textSize="13sp"
@@ -774,8 +828,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/progress_bar"
             android:layout_alignLeft="@+id/progress_bar"
-            tools:visibility="gone"
-            android:layout_alignStart="@+id/progress_bar" />
+            tools:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -787,11 +840,11 @@
                 android:layout_width="196dp"
                 android:layout_height="wrap_content"
                 android:drawablePadding="8dp"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/guardar"
                 android:textSize="16sp"
-                tools:ignore="RtlSymmetry"
-                android:paddingStart="5dp" />
+                tools:ignore="RtlSymmetry" />
 
             <Button
                 android:id="@+id/btnCancelar"
