--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -59,11 +59,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:autofillHints=""
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textColor="#fff"
-            android:textColorHint="#ccc"
-            android:autofillHints="" />
+            android:textColorHint="#ccc" />
 
         <Button
             android:id="@+id/btn_reset_password"
