--- a/app/src/main/res/layout/row_recycler_medical_evaluation.xml
+++ b/app/src/main/res/layout/row_recycler_medical_evaluation.xml
@@ -3,6 +3,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="UselessParent"
     android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
